setting launchSettings and others minor changes

--- a/CoolestAPI/Views/Home/Index.cshtml
+++ b/CoolestAPI/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
-@model IndexModel
-@* @{
+@model Index
+@{
     ViewData["Title"] = "Index";
-} *@
-<h1>Eai kk</h1>
+} 
+<h1>Testando testando</h1>
