removing the unnecessary

--- a/CoolestAPI/Views/Home/Index.cshtml
+++ b/CoolestAPI/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
-﻿@page
-@model Index
-@{
+﻿@{
     ViewData["Title"] = "Index";
-} 
-<h1>Testando testando</h1>
+}
+<h2>@ViewData["Title"].</h2>
+<h3>@ViewData["Message"]</h3>
+
+<p>Use this area to provide additional information.</p>
